--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Dokko1230/keengular/issues"
   },
-  "homepage": "https://github.com/Dokko1230/keengular"
+  "homepage": "https://github.com/Dokko1230/keengular",
+  "devDependencies": {
+    "karma": "^0.12.21",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5"
+  }
 }
